--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,12 +6,17 @@ on:
       version:
         description: '版本'
         required: true
+      disable_console:
+        description: '禁用控制台'
+        required: true
+        default: true
 
 jobs:
   build:
     strategy:
       matrix:
         os: [ macos-latest, ubuntu-latest, windows-latest ]
+        architecture: [ 'x64', 'x86' ]
 
     runs-on: ${{ matrix.os }}
 
@@ -23,7 +28,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+          architecture: ${ matrix.architecture } # optional x64 or x86. Defaults to x64 if not specified
           cache: 'pip'
           cache-dependency-path: |
             **/requirements*.txt
@@ -42,18 +47,18 @@ jobs:
           disable-plugins: options-nanny
           include-data-files: interfaces/help.md=interfaces/help.md
           output-file: GeometryCalculator
-          disable-console: true
+          disable-console: ${ github.event.inputs.disable_console }
           company-name: 几何计算器开发组
           product-name: 几何计算器
           file-version: ${{ github.event.inputs.version }}
           product-version: ${{ github.event.inputs.version }}
           file-description: 几何计算器
           copyright: "Copyright 几何计算器开发组. All right reserved."
-          macos-create-app-bundle: true
+          macos-create-app-bundle: ${ github.event.inputs.disable_console }
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: GeometryCalculator-v${{ github.event.inputs.version }}-${{ runner.os }}
+          name: GeometryCalculator-v${{ github.event.inputs.version }}-${{ runner.os }}-${ matrix.architecture }
           path: |
             build/main.dist/*
