--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         os: [ macos-latest, ubuntu-latest, windows-latest ]
         architecture: [ 'x64', 'x86' ]
