--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "QFluentWidgets": {
-        "ThemeColor": "#ff009faa",
-        "ThemeMode": "Auto"
+        "ThemeColor": "#ffffd0d6",
+        "ThemeMode": "Light"
     }
 }
